@@ -1,3 +1,10 @@
+2006-01-14  Ville Vainio  <vivainio@gmail.com>
+
+	* IPython/ipapi.py (ashook, asmagic, options): Added convenience 
+	ipapi decorators for python 2.4 users, options() provides access to rc 
+	data.
+
+
 2006-01-13  Ville Vainio  <vivainio@gmail.com>
 
 	* IPython/platutils*.py: platform specific utility functions,
